fix(deleted_messages): text overflow

--- a/src/styles/Markdown.module.css
+++ b/src/styles/Markdown.module.css
@@ -17,9 +17,6 @@
 * along with SudoBot Dashboard. If not, see <https://www.gnu.org/licenses/>.
 */
 
-.root {
-}
-
 .root h1 {
     @apply text-3xl md:text-4xl;
 }
